fixed layout issues

--- a/components/donate/DonationGoal.scss
+++ b/components/donate/DonationGoal.scss
@@ -12,7 +12,7 @@
     .donation-bar {
         margin: 2em 0;
         position: relative;
-        background-color: powderblue;
+        background-color: #F2F2F2;
         > h2 {
             position: absolute;
             right: 0;
